<resources>
    <string name="app_name">FitStream</string>
    <string name="filter_name">Фильтр</string>
    <string name="search_name">Поиск по названию</string>
    <string name="title">Заголовок</string>
    <string name="desc">Описание</string>
    <string name="not_found">Ничего не найдено</string>
    <string name="time">время</string>
    <string name="try_again">Попробовать еще раз</string>
    <string name="empty_list">Список пуст</string>
    <string name="no_data_try_again">Нет данных, попробуйте еще раз</string>
    <string name="error_try_again">Ошибка, попробуйте еще раз</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="minutes_format">%1$s мин</string>
    <string name="error_download_video">Ошибка загрузки видео</string>


</resources>