<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:clipToPadding="false">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/background_blue_rounded"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tvTitle"
                    style="@style/TextAppearance.FitStream.WorkoutTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/title" />

                <TextView
                    android:id="@+id/tvDescription"
                    style="@style/TextAppearance.FitStream.Description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle"
                    tools:text="@string/desc" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottieLoadingDesc"
                    android:layout_width="80dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/lottie_loading"
                    app:lottie_repeatMode="restart" />

                <TextView
                    android:id="@+id/tvDuration"
                    style="@style/TextAppearance.FitStream.AnotherDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDescription"
                    tools:text="@string/time" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottieLoadingMin"
                    android:layout_width="40dp"
                    android:layout_height="25dp"
                    android:layout_gravity="end"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDescription"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/lottie_loading"
                    app:lottie_repeatMode="restart" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>